// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContactPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="section"
  >
    <div
      className="container"
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`ContactPageTemplate renders with content 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-md-8 col-12"
        >
          <div>
            content
          </div>
          <hr />
        </div>
      </div>
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`ContactPageTemplate renders with html content 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-md-8 col-12"
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": <p>
                  HTML content
                </p>,
              }
            }
          />
          <hr />
        </div>
      </div>
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`ContactPageTemplate renders without content 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-md-8 col-12"
        >
          <form />
        </div>
      </div>
    </div>
  </section>,
]
`;
